fix(AppHeader): align bottom padding to designs (#2460)

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -82,7 +82,7 @@
   &.app-header--style-floating > div {
     margin: calc(var(--eds-spacing-size-2) * 1px);
     margin-right: 0;
-    padding: calc(var(--eds-spacing-size-3) * 1px) calc(var(--eds-spacing-size-1) * 1px) calc(var(--eds-spacing-size-4) * 1px) calc(var(--eds-spacing-size-1) * 1px);
+    padding: calc(var(--eds-spacing-size-3) * 1px) calc(var(--eds-spacing-size-1) * 1px) calc(var(--eds-spacing-size-3) * 1px) calc(var(--eds-spacing-size-1) * 1px);
   }
 
   .app-header__content {
